// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> renders as compact 1`] = `
<div
  className="row_jro6t0-o_O-row_compact_1g93c0b"
>
  <div
    className="primary_4ommi7"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders as spacious 1`] = `
<div
  className="row_jro6t0-o_O-row_spacious_1gf0ih7"
>
  <div
    className="primary_4ommi7"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders in middle 1`] = `
<div
  className="row_jro6t0-o_O-row_middleAlign_1moixrt"
>
  <div
    className="primary_4ommi7"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a baseline 1`] = `
<div
  className="row_jro6t0-o_O-row_baseline_bi7c4v"
>
  <div
    className="primary_4ommi7"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a topline 1`] = `
<div
  className="row_jro6t0-o_O-row_topline_hg23ez"
>
  <div
    className="primary_4ommi7"
  >
    PRIMARY
  </div>
</div>
`;
